# BlackMirror

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/blackmirror/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/blackmirror/: MainActivity.java  NotesProvider.java  SecretService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/blackmirror/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
